tests/error/misc_errors/unreachable_4.py
from tests.util import compile_guppy


@compile_guppy
def foo(x: bool) -> int:
    while x:
        continue
        x = 42
